# Via

./: .gitignore  CMakeLists.txt  Wegweiser_en_US.ts  localizable.cpp  localizable.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowcontroller.cpp  mainwindowcontroller.h  mainwindowdatamodel.h  mapview.cpp  mapview.h  menubutler.cpp  menubutler.h  project.h  route.h  routenode.cpp  routenode.h  serializable.h  viewcustomizable.cpp  viewcustomizable.h
controller/: jsonfile.cpp  jsonfile.h  mainwindowcontroller.cpp  mainwindowcontroller.h  programversion.cpp  programversion.h  uiaddnodestate.cpp  uiaddnodestate.h  uimovenodesstate.cpp  uimovenodesstate.h  uiselectnodestate.cpp  uiselectnodestate.h  uistate.cpp  uistate.h
controller/states/: mainwindowaddnodestate.cpp  mainwindowaddnodestate.h  mainwindowmovenodestate.cpp  mainwindowmovenodestate.h  mainwindowselectnodestate.cpp  mainwindowselectnodestate.h  mainwindowstate.cpp  mainwindowstate.h  mapviewaddnodestate.cpp  mapviewaddnodestate.h  mapviewmovenodestate.cpp  mapviewmovenodestate.h  mapviewselectnodestate.cpp  mapviewselectnodestate.h  mapviewstate.cpp  mapviewstate.h  routenodeaddnodestate.cpp  routenodeaddnodestate.h  routenodemovenodestate.cpp  routenodemovenodestate.h  routenodeselectnodestate.cpp  routenodeselectnodestate.h  routenodestate.cpp  routenodestate.h  uiaddnodestate.h  uistate.cpp  uistate.h
data-structures/: indexlist.h
interfaces/: localizable.cpp  mapviewplaceable.h  nameable.cpp  nameable.h  nodeshapeable.cpp  nodeshapeable.h  routenodeshape.cpp  routenodeshape.h  serializable.cpp  serializable.h  shapeable.h  shapekeyable.h  shapekeymodifiable.cpp  shapekeymodifiable.h  viewcustomizable.cpp  viewcustomizable.h  visibilitychangeable.cpp  visibilitychangeable.h
l10n/: localizeduistrings.cpp  localizeduistrings.h
model/: checkablestringlistmodel.cpp  checkablestringlistmodel.h  data.cpp  data.h  mainwindowdatamodel.cpp  project.cpp  project.h  routedata.cpp  routedata.h  routenodedata.cpp  routenodedata.h
shapes/: diamond.cpp  diamond.h  hexagon.cpp  hexagon.h  nodeshapetriangledown.cpp  nodeshapetriangledown.h  nodeshapetriangleup.cpp  nodeshapetriangleup.h  octagon.cpp  octagon.h  route.cpp  route.h  routeconnection.cpp  routeconnection.h  routenode.cpp  routenode.h  routenodeshape.cpp  routenodeshape.h  routenodeshapefactory.cpp  routenodeshapefactory.h  shapefactory.cpp  shapefactory.h  shapekeys.h  square.cpp  square.h  triangle.cpp  triangle.h  triangledown.cpp  triangledown.h  triangleup.cpp  triangleup.h
ui/: automaticallyshrinkinggraphicsscene.cpp  automaticallyshrinkinggraphicsscene.h  checkablestringlistmodel.cpp  checkablestringlistmodel.h  colorgenerator.cpp  colorgenerator.h  colorpreviewbutton.cpp  colorpreviewbutton.h  localizeduistrings.cpp  localizeduistrings.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapview.cpp  mapview.h  routedataview.cpp  routedataview.h  routeextratextlabel.cpp  routeextratextlabel.h  routenodelabel.cpp  routenodelabel.h
unit-tests/: jsonunittests.cpp  unittestmain.cpp  unittestsjson.cpp  unittestsjson.h  unittestsprogramversion.cpp  unittestsprogramversion.h  unittestsroutedata.cpp  unittestsroutedata.h
